--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
                         </div>
                         <div class="p-4 bg-yellow-50 rounded-lg border border-yellow-200">
                             <p class="text-sm font-medium text-yellow-700 flex items-center">
-                                Original Gross Fees/Cashback (EGP) <span class="calc-button" onclick="showCalculationSteps('grossFees', document.getElementById('result-gross-fees').textContent)">?</span>
+                                Original Fees/Cashback/Slot Discount (EGP) <span class="calc-button" onclick="showCalculationSteps('grossFees', document.getElementById('result-gross-fees').textContent)">?</span>
                             </p>
                             <p id="result-gross-fees" class="text-2xl font-bold text-yellow-800 mt-1">0.00</p>
                         </div>
                         <div class="p-4 bg-green-50 rounded-lg border border-green-200">
                             <p class="text-sm font-medium text-green-700 flex items-center">
-                                Total Promo Savings (EGP)
+                                Total Promo Savings Cashback/Slot Discount/Promo (EGP)
                                 <span class="calc-button" onclick="showCalculationSteps('totalSavings', document.getElementById('result-total-savings').textContent)">?</span>
                             </p>
                             <p id="result-total-savings" class="text-2xl font-bold text-green-800 mt-1">0.00</p>
@@ -269,7 +269,7 @@
                             </div>
                             <div class="p-2 bg-green-50 rounded-lg">
                                 <p class="text-xs font-medium text-green-700 flex items-center">
-                                    New Gross Fees (EGP)
+                                    New Fees/Slot Discount/Cashback (EGP)
                                      <span class="calc-button" onclick="showCalculationSteps('recGrossFees', document.getElementById('rec-gross-fees').textContent)">?</span>
                                 </p>
                                 <p id="rec-gross-fees" class="font-bold text-green-900 mt-1">0.00</p>
@@ -280,7 +280,7 @@
                             </div>
                             <div class="p-2 bg-green-50 rounded-lg">
                                 <p class="text-xs font-medium text-green-700 flex items-center">
-                                    Potential Total Savings (EGP)
+                                    Potential Total Savings Cashback/SlotDiscount/Promo (EGP)
                                     <span class="calc-button" onclick="showCalculationSteps('recTotalSavings', document.getElementById('rec-total-savings').textContent)">?</span>
                                 </p>
                                 <p id="rec-total-savings" class="font-bold text-green-900 mt-1">0.00</p>
@@ -295,7 +295,7 @@
                             </div>
                                                         <div class="p-2 bg-red-200 rounded-lg">
                                 <p class="text-xs font-medium text-red-900 flex items-center">
-                                    Potential New RPS (90%)
+                                    Potential New RPS with promo (90%)
                                     <span class="calc-button" onclick="showCalculationSteps('recRpsTotalPromo', document.getElementById('rec-rps-promo-total').textContent)">?</span>
                                 </p>
                                 <p id="rec-rps-promo-total" class="text-xl font-bold text-red-900 mt-1">0.00</p>
