--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         </div>
                         <div class="p-4 bg-green-50 rounded-lg border border-green-200">
                             <p class="text-sm font-medium text-green-700 flex items-center">
-                                Total Promo Savings Cashback/Slot Discount/Promo (EGP)
+                                Total Savings Cashback/Slot Discount/Promo Discount (EGP)
                                 <span class="calc-button" onclick="showCalculationSteps('totalSavings', document.getElementById('result-total-savings').textContent)">?</span>
                             </p>
                             <p id="result-total-savings" class="text-2xl font-bold text-green-800 mt-1">0.00</p>
@@ -280,7 +280,7 @@
                             </div>
                             <div class="p-2 bg-green-50 rounded-lg">
                                 <p class="text-xs font-medium text-green-700 flex items-center">
-                                    Potential Total Savings Cashback/SlotDiscount/Promo (EGP)
+                                    Potential Total Savings Cashback/<br>Slot Discount/Promo (EGP)
                                     <span class="calc-button" onclick="showCalculationSteps('recTotalSavings', document.getElementById('rec-total-savings').textContent)">?</span>
                                 </p>
                                 <p id="rec-total-savings" class="font-bold text-green-900 mt-1">0.00</p>
